Create Category Homes Page Layout. Divide page into "HomeList" and "HomeCard" components. Add custom "useFetchCategoryHomes" hook. Realize infinte scroll logic using "IntersectionObserver" API.

--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -5,6 +5,7 @@
   position: fixed;
   background-color: #fff;
   width: 100%;
+  z-index: 99;
 
   .lgNavLogo {
     width: 102px;
@@ -30,5 +31,5 @@
 }
 
 .underNav {
-  height: 50px;
+  height: 60px;
 }
