--- a/styles/utils.module.scss
+++ b/styles/utils.module.scss
@@ -1,4 +1,9 @@
 .container {
   padding-left: 24px;
   padding-right: 24px;
+
+  @media (max-width: 350px) {
+    padding-left: 8px;
+    padding-right: 8px;
+  }
 }
