--- a/components/FiltrationArea/FiltrationArea.module.scss
+++ b/components/FiltrationArea/FiltrationArea.module.scss
@@ -42,6 +42,11 @@
   }
 }
 
+.active {
+  border: 2px solid #000 !important;
+  background-color: #f7f7f7 !important;
+}
+
 .filterControl {
   display: flex;
   justify-content: space-between;
