Connect "google-map-react" lib and realize homes marker visualization on google map.

--- a/components/HomeCard/HomeCard.module.scss
+++ b/components/HomeCard/HomeCard.module.scss
@@ -70,7 +70,7 @@
       .price {
         position: absolute;
         bottom: 0;
-        right: 0;
+        right: 10px;
         color: #000;
         font-size: 14px;
 
