--- a/styles/houses.module.scss
+++ b/styles/houses.module.scss
@@ -1,5 +1,10 @@
 .contentWrapper {
   display: flex;
+  justify-content: space-between;
+
+  @media (max-width: 1128px) {
+    flex-direction: column-reverse;
+  }
 }
 
 .headingWrapper {
@@ -27,5 +32,18 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+  }
+}
+
+.rightContent {
+  width: 100%;
+  height: 350px;
+  position: static;
+  right: 0;
+
+  @media (min-width: 1128px) {
+    position: fixed;
+    width: 45%;
+    max-width: 642px;
   }
 }
